--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,12 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <div
-            class="profile__image"
-            style="background-image: url(<%=require('./images/avatar.jpg')%>)"
-          ></div>
+          <div class="profile__image">
+            <img
+              class="profile__image-avatar"
+              src="<%=require('./images/avatar.jpg')%>"
+            />
+          </div>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button" type="button"></button>
@@ -123,3 +125,4 @@
     </template>
   </body>
 </html>
+
