--- a/src/index.html
+++ b/src/index.html
@@ -47,21 +47,31 @@
           <form class="popup__form" name="edit-profile" novalidate>
             <label class="popup__label">
               <input
-                type="text"
-                name="userName"
                 id="owner-name"
+                type="text"
+                name="name"
                 class="popup__input popup__input_type_name"
                 placeholder="Имя"
+                minlength="2"
+                maxlength="40"
+                pattern="^[a-zA-Zа-яА-ЯёË\- ]+$"
+                data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+                required
               />
               <span class="popup__error" id="owner-name-error"></span>
             </label>
             <label class="popup__label">
               <input
-                type="text"
-                name="userDescription"
                 id="owner-description"
+                type="text"
+                name="description"
                 class="popup__input popup__input_type_description"
                 placeholder="Занятие"
+                minlength="2"
+                maxlength="200"
+                pattern="^[a-zA-Zа-яА-ЯёË\- ]+$"
+                data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+                required
               />
               <span class="popup__error" id="owner-description-error"></span>
             </label>
