Обновлена логика обновления аватара

--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,12 @@
       <main class="content">
         <section class="profile page__section">
           <div class="profile__image">
-            <img
-              class="profile__image-avatar"
-              src="<%=require('./images/avatar.jpg')%>"
-            />
+            <img class="profile__image-avatar" src="" />
           </div>
           <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button" type="button"></button>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
@@ -124,6 +121,27 @@
           <img alt="" class="popup__image" />
           <p class="popup__caption"></p>
         </div>
+      </div>
+    </div>
+
+    <div class="popup popup_type_avatar">
+      <div class="popup__content">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+
+        <form class="popup__form" name="update-avatar" novalidate>
+          <input
+            id="avatar-link"
+            type="url"
+            name="link"
+            class="popup__input popup__input_avatar"
+            placeholder="Ссылка на картинку"
+            required
+          />
+          <span class="popup__error" id="avatar-link-error"></span>
+          <!-- <span class="link-input-error popup__input-error"></span> -->
+          <button type="submit" class="button popup__button">Сохранить</button>
+        </form>
       </div>
     </div>
 
