Добавлен функционал добавления/удаления лайка

--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,12 @@
         <!--Фоновое, инлайном-->
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__like-button"></button>
+
+
+                 <div class="card__like-wrapper">
+        <button type="button" class="card__like-button"></button>
+        <span class="card__like-count"></span>
+      </div>
         </div>
       </li>
     </template>
